# bonsai

./: .clang-format  .gitignore  LICENSE  README.md  Vagrantfile  bonsai.desktop  log.txt  meson.build  meson_options.txt
assets/: LICENSE
bonsai/: cursor.c  global.c  input.c  main.c  meson.build  output.c  server.c  util.c
bonsai/config/: atom.c  config.c  def.c  global.c  input.c  output.c  parse.c  signal.c
bonsai/desktop/: cursor.c  decoration.c  idle.c  inhibit.c  layer-shell.c  layer.c  layer_shell.c  layers.c  lock.c  view.c  workspace.c  xdg_shell.c
bonsai/events/: bsi-input.c  bsi-listeners.c  bsi-output.c  bsi-view.c  bsi-workspace.c  evdeco.c  evglobal.c  evinput.c  evlayershell.c  evoutput.c  evview.c  evworkspace.c  listeners.c  output.c  view.c
bonsai/input/: cursor.c  keyboard.c
bonsai/scene/: cursor.c  view.c  workspace.c
devenv/: install_compile_deps.sh  install_runtime_deps.sh  prepare_box.sh  project_build.sh  project_clean.sh  project_kill.sh  project_prepare_git.sh  project_prepare_local.sh  project_run.sh  project_update.sh
include/bonsai/: cursor.h  events.h  global.h  input.h  log.h  output.h  scene.h  server.h  util.h
include/bonsai/config/: atom.h  config.h  def.h  global.h  input.h  output.h  parse.h  signal.h
include/bonsai/desktop/: decoration.h  idle.h  inhibit.h  layer-shell.h  layer.h  layers.h  lock.h  view.h  workspace.h
include/bonsai/input/: cursor.h  keyboard.h
include/bonsai/scene/: cursor.h  view.h  workspace.h
include/protocols/: server-decoration-protocol.h
package/arch/: PKGBUILD  bonsai-0.1.0.dev-1-x86_64.pkg.tar.zst
protocols/: idle.xml  server-decoration.xml  wlr-layer-shell-unstable-v1.xml  wlr-screencopy-unstable-v1.xml
remote/: build.sh  prefs.sh  setup.sh
remote/keys/: id_one  id_one.pub  id_two  id_two.pub
